--- a/Resources/views/Job/jobOfferCreateForm.html.twig
+++ b/Resources/views/Job/jobOfferCreateForm.html.twig
@@ -1,5 +1,8 @@
 {% extends "ClarolineCoreBundle:Desktop:layout.html.twig" %}
 
+{% block title %}
+    {{ 'job_offer_creation'|trans({}, 'job') }}
+{% endblock %}
 
 {% block section_content %}
     <div class="panel-heading">
