Allow to create/edit/delete job request

--- a/Resources/views/Job/announcerWidget.html.twig
+++ b/Resources/views/Job/announcerWidget.html.twig
@@ -1,5 +1,4 @@
-<div class="panel-group" id="announcer-widget-accordion" role="tablist" aria-multiselectable="true">
-    
+<div>
     {% if announcer is not empty %}
         <ul>
             <li>
