--- a/Resources/views/Job/announcerJobRequestsList.html.twig
+++ b/Resources/views/Job/announcerJobRequestsList.html.twig
@@ -28,7 +28,7 @@
 {% block section_content %}
     <div class="panel-heading">
         <h3 class="panel-title">
-            {{ 'job_requests_list'|trans({}, 'tools') }}
+            {{ 'job_requests_list'|trans({}, 'job') }}
         </h3>
     </div>
     <div class="panel-body" id="announcer-job-requests-list-body">
