--- a/Resources/views/Job/seekerJobRequestsList.html.twig
+++ b/Resources/views/Job/seekerJobRequestsList.html.twig
@@ -1,13 +1,12 @@
-{% macro renderPager(pager, announcerId, orderedBy, order, max) %}
+{% macro renderPager(pager, orderedBy, order, max) %}
     {{
         pagerfanta(
             pager,
             'twitter_bootstrap_translated',
             {
                 'proximity' : 1,
-                'routeName': 'formalibre_job_announcer_job_offers_list',
+                'routeName': 'formalibre_job_seeker_job_requests_list',
                 'routeParams': {
-                    'announcer': announcerId,
                     'orderedBy': orderedBy,
                     'order': order,
                     'max': max
@@ -22,46 +21,49 @@
 {% extends "ClarolineCoreBundle:Desktop:layout.html.twig" %}
 
 {% block title %}
-    {{ 'job_offers_list'|trans({}, 'job') }}
+    {{ 'my_cv'|trans({}, 'job') }}
 {% endblock %}
 
 {% block section_content %}
     <div class="panel-heading">
         <h3 class="panel-title">
-            {{ 'job_offers_list'|trans({}, 'tools') }}
+            {{ 'my_cv'|trans({}, 'job') }}
         </h3>
     </div>
-    <div class="panel-body" id="announcer-job-offers-list-body">
-        {% if jobOffers|length > 0 %}
+    <div class="panel-body" id="seeker-job-requests-list-body">
+        {% if jobRequests|length > 0 %}
 
-            {% if jobOffers.getNbPages() > 1 %}
-                {{ renderPager(jobOffers, announcer.getId(), orderedBy, order, max) }}
+            {% if jobRequests.getNbPages() > 1 %}
+                {{ renderPager(jobRequests, orderedBy, order, max) }}
             {% endif %}
             <div class="table-responsive">
                 <table class="table">
-                    {% for jobOffer in jobOffers %}
-                        {% set expirationDate = jobOffer.getExpirationDate() %}
-                        <tr id="job-offer-row-{{ jobOffer.getId() }}"
+                    <tr>
+                        <th>{{ 'title'|trans({}, 'platform') }}</th>
+                        <th>{{ 'community'|trans({}, 'job') }}</th>
+                        <th>{{ 'expiration_date'|trans({}, 'job') }}</th>
+                        <th>{{ 'cv'|trans({}, 'job') }}</th>
+                        <th></th>
+                    </tr>
+                    {% for jobRequest in jobRequests %}
+                        {% set expirationDate = jobRequest.getExpirationDate() %}
+                        {% set user = jobRequest.getUser() %}
+                        <tr id="job-request-row-{{ jobRequest.getId() }}"
                             {% if expirationDate is not empty and expirationDate|date('Y-m-d H:i:s') < 'now'|date('Y-m-d H:i:s') %}style="background-color: grey"{% endif %}
                         >
-                            <td>
-                                {{ jobOffer.getTitle() }}
-                            </td>
-                            <td>
-                                {{ expirationDate|date('d/m/Y') }}
-                            </td>
-                            <td>
-                                {{ jobOffer.getOriginalName() }}
-                            </td>
+                            <td>{{ jobRequest.getTitle() }}</td>
+                            <td>{{ jobRequest.getCommunity().getName() }}</td>
+                            <td>{{ expirationDate|date('d/m/Y') }}</td>
+                            <td>{{ jobRequest.getOriginalName() }}</td>
                             <td>
                                 <div class="btn-group">
                                     <a class="btn btn-default"
-                                       href="{{ path('formalibre_job_job_offer_edit_form', {'jobOffer': jobOffer.getId()}) }}"
+                                       href="{{ path('formalibre_job_job_request_edit_form', {'jobRequest': jobRequest.getId()}) }}"
                                     >
                                         <i class="fa fa-edit"></i>
                                     </a>
-                                    <button class="btn btn-danger delete-job-offer-btn"
-                                            data-job-offer-id="{{ jobOffer.getId() }}"
+                                    <button class="btn btn-danger delete-job-request-btn"
+                                            data-job-request-id="{{ jobRequest.getId() }}"
                                     >
                                         <i class="fa fa-trash"></i>
                                     </button>
@@ -72,8 +74,8 @@
                 </table>
             </div>
 
-            {% if jobOffers.getNbPages() > 1 %}
-                {{ renderPager(jobOffers, announcer.getId(), orderedBy, order, max) }}
+            {% if jobRequests.getNbPages() > 1 %}
+                {{ renderPager(jobRequests, orderedBy, order, max) }}
             {% endif %}
         {% else %}
             <div class="alert alert-warning">
@@ -81,10 +83,10 @@
             </div>
         {% endif %}
         <br>
-        <a href="{{ path('formalibre_job_job_offer_create_form', {'announcer': announcer.getId()}) }}"
+        <a href="{{ path('formalibre_job_job_request_create_form') }}"
            class="btn btn-primary"
         >
-            {{ 'create_job_offer'|trans({}, 'job') }}
+            {{ 'add_cv'|trans({}, 'job') }}
         </a>
     </div>
 {% endblock %}
@@ -95,7 +97,7 @@
             src="{{ url('bazinga_jstranslation_js', { 'domain': 'job' }) }}"
     >
     </script>
-    <script src='{{ asset('bundles/formalibrejob/js/announcerJobOffersList.js') }}'
+    <script src='{{ asset('bundles/formalibrejob/js/seekerJobRequestsList.js') }}'
             type="text/javascript"
     >
     </script>
