--- a/Resources/views/Job/announcerWidget.html.twig
+++ b/Resources/views/Job/announcerWidget.html.twig
@@ -2,6 +2,11 @@
     {% if announcer is not empty %}
         <ul>
             <li>
+                <a href="{{ path('formalibre_job_announcer_edit_form', {'announcer': announcer.getId()}) }}">
+                    {{ 'preferences'|trans({}, 'platform') }}
+                </a>
+            </li>
+            <li>
                 <a href="{{ path('formalibre_job_announcer_job_offers_list', {'announcer': announcer.getId()}) }}">
                     {{ 'my_job_offers'|trans({}, 'job') }}
                 </a>
