Add community admin management pages

--- a/Resources/views/Job/adminWidget.html.twig
+++ b/Resources/views/Job/adminWidget.html.twig
@@ -1,6 +1,5 @@
 <div>
-{#     <a href="{{ path('formalibre_job_seeker_job_requests_list') }}">#}
-     <a href="">
+     <a href="{{ path('formalibre_job_announcers_management_menu') }}">
         {{ 'announcers_management'|trans({}, 'job') }}
     </a>
 </div>
