--- a/Resources/views/Job/pendingAnnouncersManagement.html.twig
+++ b/Resources/views/Job/pendingAnnouncersManagement.html.twig
@@ -1,19 +1,14 @@
-{% extends "ClarolineCoreBundle:Administration:layout.html.twig" %}
+{% extends "ClarolineCoreBundle:Desktop:layout.html.twig" %}
 
 {% block breadcrumb %}
     {{
         macros.breadcrumbs([
             {
-                'icon': 'fa fa-cog',
-                'name': 'administration'|trans({}, 'platform'),
-                'href': path('claro_admin_index')
+                'name': 'announcers_management_menu'|trans({}, 'job'),
+                'href': path('formalibre_job_announcers_management_menu')
             },
             {
-                'name': 'formalibre_job_admin_tool'|trans({}, 'tools'),
-                'href': path('formalibre_job_admin_tool_index')
-            },
-            {
-                'name': 'pending_announcers'|trans({}, 'job'),
+                'name': 'pending_announcers_managemnet'|trans({}, 'job'),
                 'href': ''
             }
         ])
@@ -90,7 +85,7 @@
             src="{{ url('bazinga_jstranslation_js', { 'domain': 'job' }) }}"
     >
     </script>
-    <script src='{{ asset('bundles/formalibrejob/js/adminPendingAnnouncersManagement.js') }}'
+    <script src='{{ asset('bundles/formalibrejob/js/pendingAnnouncersManagement.js') }}'
             type="text/javascript"
     >
     </script>
