Allow to view all job offers

--- a/Resources/views/Job/announcerJobOffersList.html.twig
+++ b/Resources/views/Job/announcerJobOffersList.html.twig
@@ -28,7 +28,7 @@
 {% block section_content %}
     <div class="panel-heading">
         <h3 class="panel-title">
-            {{ 'job_offers_list'|trans({}, 'tools') }}
+            {{ 'job_offers_list'|trans({}, 'job') }}
         </h3>
     </div>
     <div class="panel-body" id="announcer-job-offers-list-body">
