--- a/Resources/views/Job/announcersManagement.html.twig
+++ b/Resources/views/Job/announcersManagement.html.twig
@@ -2,7 +2,7 @@
 
 {% block breadcrumb %}
     {{
-        macros.breadcrumbs([
+        macros.desktopBreadcrumbs([
             {
                 'name': 'announcers_management_menu'|trans({}, 'job'),
                 'href': path('formalibre_job_announcers_management_menu')
