--- a/Resources/views/Job/jobRequestEditForm.html.twig
+++ b/Resources/views/Job/jobRequestEditForm.html.twig
@@ -4,12 +4,22 @@
     {{ 'job_request_edition'|trans({}, 'job') }}
 {% endblock %}
 
+{% block breadcrumb %}
+    {{
+        macros.desktopBreadcrumbs([
+            {
+                'name': 'my_cv'|trans({}, 'job'),
+                'href': path('formalibre_job_seeker_job_requests_list')
+            },
+            {
+                'name': 'job_request_edition'|trans({}, 'job'),
+                'href': ''
+            }
+        ])
+    }}
+{% endblock %}
+
 {% block section_content %}
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            {{ 'job_request_edition'|trans({}, 'job') }}
-        </h3>
-    </div>
     <form action="{{ path('formalibre_job_job_request_edit', {'jobRequest': jobRequest.getId()}) }}" 
           method="POST"
           {{ form_enctype(form) }}
